--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
       href="https://fonts.googleapis.com/css2?family=Oswald:wght@300;500&family=Roboto:wght@300;400&display=swap"
       rel="stylesheet"
     />
+    <link rel="icon" href="image/logo.png" type="image/icon type">
     <title>iiCaiu</title>
     <link rel="shortcut icon" type="imagex/png" href="image/IiCaiu.png" />
   </head>
